--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -36,13 +36,13 @@
 </style>
 <div class="topnav">
   <a> <img src="../assets/img/logo.png" width="100" height="100"
-      alt="Logo Unavaliable"></a>
+      alt="Logo Unavailable"></a>
   <a>
     <h1 style="padding:10px;color: black;">Armed Forces Jobs</h1>
   </a>
 </div>
 <div class="topnav">
-  <a class="active" href="/firstpage">Home</a>
+  <a class="active" href="/">Home</a>
   <a href="/ssignup">Register</a>
   <a href="/viewcandidates">View Selected Candidates</a>
 </div>
